# slam_dataset_transfer

./: .gitignore  CMakeLists.txt  DataRecorder.h  README.md  Singleton.cpp  dataTransfer.cpp  imgResize.cpp  main.cpp  readFile.cpp  readTransfer.cpp  test.cpp  test1.cpp
config/: xiaomi2s.yaml
